objects/LPRegionMapping__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LPRegionMapping</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RegionMappings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LPRegionMappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>